--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-jest": "^29.7.0",
     "colorthief": "^2.3.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
-    "gh-pages": "^2.1.1",
+    "gh-pages": "^6.3.0",
     "jest-canvas-mock": "^2.3.1",
     "lottie-react": "^2.4.0",
     "react": "^16.10.2",
