Update homepage and name in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://arundoddi.github.io/vadme",
-  "name": "vadme",
+  "homepage": "https://sriramreddy42.github.io/Sri-",
+  "name": "Sri-",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
